docs/api/qiskit/1.0/qiskit.circuit.library.CRYGate.mdx
---
title: CRYGate (v1.0)
description: API reference for qiskit.circuit.library.CRYGate in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CRYGate
---

# CRYGate

<Class id="qiskit.circuit.library.CRYGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/ry.py#L139-L279" signature="qiskit.circuit.library.CRYGate(theta, label=None, ctrl_state=None, *, duration=None, unit='dt', _base_label=None)" modifiers="class">
  Bases: [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

  Controlled-RY gate.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`cry()`](qiskit.circuit.QuantumCircuit#cry "qiskit.circuit.QuantumCircuit.cry") method.

  **Circuit symbol:**

  ```python
  q_0: ────■────
       ┌───┴───┐
  q_1: ┤ Ry(ϴ) ├
       └───────┘
  ```

  **Matrix representation:**

$$
\newcommand{\rotationangle}{\frac{\theta}{2}}

CRY(\theta)\ q_0, q_1 =
I \otimes |0\rangle\langle 0| + RY(\theta) \otimes |1\rangle\langle 1| =
\begin{pmatrix}
1 & 0         & 0 & 0 \\
0 & \cos\left(\rotationangle\right) & 0 & -\sin\left(\rotationangle\right) \\
0 & 0         & 1 & 0 \\
0 & \sin\left(\rotationangle\right) & 0 & \cos\left(\rotationangle\right)
\end{pmatrix}
$$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───────┐
    q_0: ┤ Ry(ϴ) ├
         └───┬───┘
    q_1: ────■────
    ```

$$
\newcommand{\rotationangle}{\frac{\theta}{2}}

CRY(\theta)\ q_1, q_0 =
|0\rangle\langle 0| \otimes I + |1\rangle\langle 1| \otimes RY(\theta) =
\begin{pmatrix}
1 & 0 & 0 & 0 \\
0 & 1 & 0 & 0 \\
0 & 0 & \cos\left(\rotationangle\right) & -\sin\left(\rotationangle\right) \\
0 & 0 & \sin\left(\rotationangle\right) & \cos\left(\rotationangle\right)
\end{pmatrix}
$$
  </Admonition>

  Create new CRY gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.CRYGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.CRYGate.base_class "qiskit.circuit.library.CRYGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.CRYGate.condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.CRYGate.condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CRYGate.ctrl_state">
    Return the control state of the gate as a decimal integer.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CRYGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CRYGate.definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CRYGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CRYGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.CRYGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CRYGate.name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.CRYGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CRYGate.num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.CRYGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CRYGate.params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.CRYGate.unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.CRYGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/ry.py#L248-L260" signature="inverse(annotated=False)">
    Return inverse CRY gate (i.e. with the negative rotation angle)

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as the inverse of this gate is always a [`CRYGate`](#qiskit.circuit.library.CRYGate "qiskit.circuit.library.CRYGate") with an inverted parameter value.

    **Returns**

    inverse gate.

    **Return type**

    [CRYGate](#qiskit.circuit.library.CRYGate "qiskit.circuit.library.CRYGate")

    .
  </Function>
</Class>

